--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "dependencies": {
     "react": "16.13.1",
     "react-native": "0.63.2",
-    "react-native-screens": "^2.14.0"
+    "react-native-image-picker": "^2.3.4"
   },
   "devDependencies": {
     "@nrwl/eslint-plugin-nx": "10.0.1",
