--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "react-native": "*"
+    "react-native": "*",
+    "react-native-screens": "*"
   }
 }
